# Asmoday

./: .env.example  .gitignore  AGENTS.md  README.md  ROI.md  pyproject.toml  vision-service-contract.md
src/vision_service/: app.py  container.py  settings.py
src/vision_service/api/: __init__.py  routes.py  ws_routes.py
src/vision_service/contracts/: __init__.py  callbacks.py  catalog.py  control.py  models.py  ws.py
src/vision_service/gateway/: __init__.py  client.py  session.py  transport.py
src/vision_service/runtime/: __init__.py  dwell.py  events.py  evidence.py  manager.py  telemetry.py
src/vision_service/vision/: __init__.py  analysis.py  backend.py  capture.py  confidence.py  entities.py  key_entity_matcher.py  key_entity_response.py  key_entity_runtime.py  model_queue.py  pipeline.py  semantic.py  semantic_fallback.py  semantic_runtime.py  stream.py  worker_events.py  worker_runtime.py  zone.py
src/vision_service/vision/roi/: __init__.py  detector.py  models.py  state.py
tests/api/: test_model_routes.py  test_ws_routes.py
tests/contracts/: test_control.py
tests/runtime/: test_dwell.py  test_manager_streams.py  test_telemetry.py
tests/vision/: test_analysis.py  test_backend_models.py  test_capture.py  test_key_entity_matcher.py  test_pipeline.py  test_semantic.py  test_semantic_fallback.py  test_stream.py  test_worker_events.py
tests/vision/roi/: test_detector.py  test_state.py
