[project]
name = "vision-service"
version = "0.1.0"
description = "Gateway-integrated RTSP vision service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "numpy>=2.2.0",
  "opencv-python-headless>=4.10.0.84",
  "pydantic-settings>=2.10.0",
  "supervision>=0.25.1",
  "ultralytics>=8.3.0",
  "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
]

[project.scripts]
vision-service = "vision_service.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
